syntax = "proto3";

package github.com.michaelhenkel.config_controller.pkg.apis.v1;

/*protoc crpd.proto  -I. -I/home/mhenkel/go/src --gogo_out=plugins=grpc:/home/mhenkel/go/src*/
import "ssd-git.juniper.net/contrail/cn2/contrail/pkg/apis/core/v1alpha1/generated.proto";

option go_package = "github.com/michaelhenkel/config_controller/pkg/apis/v1";

service ConfigController {
    rpc VirtualNetworkWatch(SubscriptionRequest) returns (stream ssd_git.juniper.net.contrail.cn2.contrail.pkg.apis.core.v1alpha1.VirtualNetwork);
    rpc SubscribeListWatch(SubscriptionRequest) returns (stream Resource);
}

message SubscriptionRequest {
    string name = 1;
}

message Resource {
    oneof resource {
        ssd_git.juniper.net.contrail.cn2.contrail.pkg.apis.core.v1alpha1.VirtualNetwork virtualNetwork = 1;
    }
}